# HappyShark

./: CMakeLists.txt  Game.h  README.md  Regime.h  main.cpp  ~$README.md
Game/: CMakeLists.txt  Game.cpp  Game.h  Shark.cpp  Shark.h  Tap.cpp  Tap.h
Pipe/: CMakeLists.txt  Pipe.cpp  Pipe.h
Score/: CMakeLists.txt  Score.cpp  Score.h
Shark/: CMakeLists.txt  Shark.cpp  Shark.h
State/: CMakeLists.txt  State.cpp  State.h
Tap/: CMakeLists.txt  Tap.cpp
